--- a/style/style.css
+++ b/style/style.css
@@ -489,7 +489,7 @@
   color: white;
 }
 
-.third {
+.home3 {
   background-color: aliceblue;
   padding-bottom: 130px;
 }
@@ -656,12 +656,12 @@
   text-transform: capitalize;
 }
 
-.forth {
+.home4 {
   padding-bottom: 100px;
   padding-top: 130px;
 }
 
-.fifth {
+.home5 {
   background-color: rgba(70, 13, 144, 0.808);
   padding-top: 100px;
   padding-bottom: 100px;
@@ -737,7 +737,7 @@ button {
   position: relative;
 }
 
-.sixth {
+.home6 {
   background-color: aliceblue;
   padding-top: 100px;
   padding-bottom: 100px;
@@ -795,14 +795,14 @@ button {
   border-radius: 5px;
 }
 
-.seven {
+.home7 {
   display: flex;
   justify-content: space-between;
   padding-top: 150px;
   padding-bottom: 100px;
 }
 
-.seven2 {
+.home7-2 {
   display: flex;
   gap: 130px;
 }
@@ -848,7 +848,7 @@ button {
   left: -45px;
 }
 
-.seven2 p {
+.home7-2 p {
   color: rgb(116, 116, 116);
   line-height: 25px;
 
