--- a/style/style.css
+++ b/style/style.css
@@ -4,8 +4,7 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: Kalam;
 }
 
 .container {
@@ -207,7 +206,7 @@
 }
 
 
-.clip {
+.tugma {
   width: 100%;
   height: 990px;
   clip-path: polygon(0 38%, 100% 0%, 100% 100%, 0% 100%);
@@ -226,7 +225,7 @@
   z-index: 10;
 }
 
-.underline {
+.red-line {
   width: 50px;
   height: 3px;
   background-color: red;
@@ -345,7 +344,7 @@
   background-color: rgba(144, 238, 144, 0.386);
 }
 
-.ship p {
+.tex p {
   text-transform: capitalize;
   color: red;
   font-size: 14px;
@@ -357,13 +356,15 @@
   padding-top: 4px;
   padding-bottom: 18px;
   letter-spacing: 1px;
+  margin-right: 100px;
 }
 
-.ship2 p {
+.tex2 p {
   color: rgb(116, 116, 116);
+  margin-right: 100px;
 }
 
-.ship3 button {
+.tex3 button {
   padding: 8px 23px;
   margin-top: 35px;
   border: none;
@@ -630,7 +631,7 @@
   line-height: 23.5px;
 }
 
-.banan p {
+.aabb p {
   padding-bottom: 25px;
 }
 
